fix overflow and vertical align

--- a/s3/resources/public/css/ontrail.css
+++ b/s3/resources/public/css/ontrail.css
@@ -328,12 +328,16 @@ footer img {
   box-shadow: inset 0 1px 3px #ddd;
   border-radius: 4px;
   position: relative;
+  vertical-align: middle;
+  font-family: sans-serif;
 }
 
 .zelected {
+  overflow: hidden;
+  white-space: nowrap;
 }
 .zelected.placeholder {
-  color: #999f82;
+  color: #999;
 }
 .zelected:hover {
   border-color: rgba(0, 117, 234, 0.25);
